fix(Projects): Adjust text size and spacing for mobile view

--- a/src/component/Projects/ProjectCard.module.css
+++ b/src/component/Projects/ProjectCard.module.css
@@ -60,7 +60,7 @@
   grid-column: 8 / span 4;
 
   /* dl 태그 기본 마진 제거 */
-  margin: 0;
+  /* margin: 0; */
 
   margin-top: 0.5rem;
 
@@ -69,7 +69,7 @@
 
   .project-detail-value {
     /* dd 태그 기본 스타일 제거 */
-    margin: 0;
+    /* margin: 0; */
     padding: 0.25rem;
 
     font-size: 1.125rem;
@@ -193,6 +193,10 @@
 
   .project-name-container {
     grid-column: 1 / span 10;
+
+    .project-name {
+      margin-top: 1rem;
+    }
   }
 
   .project-image {
@@ -204,6 +208,16 @@
 
   .project-detail-list {
     grid-column: 1 / span 10;
+
+    margin-top: 0.25rem;
+
+    .project-detail-value {
+      /* dd 태그 기본 스타일 제거 */
+      /* margin: 0; */
+      padding: 0.25rem;
+
+      font-size: 1rem;
+    }
   }
 
   .description-container {
@@ -212,10 +226,12 @@
 
   .feature-container {
     grid-column: 1 / span 10;
+    margin-bottom: 2rem;
   }
 
   .project-link-container {
     grid-column: 7 / span 3;
+    margin-bottom: 0.25rem;
   }
 }
 
